# hrd-py

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml
docs_api/: PROTOCOL.md
hrd_py/: api.py  cli.py  client.py  config.py  exceptions.py  models.py
tests/: test_api.py  test_client.py
