[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hrd-py"
version = "0.0.6"
description = "A Python library and CLI for the HRD.pl API"
readme = "README.md"
authors = [{name = "TheUndefined"}]
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.9.0",
    "types-PyYAML>=6.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
hrd = "hrd_py.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hrd_py*"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"
